--- a/app/views/water/current/farming-type.html
+++ b/app/views/water/current/farming-type.html
@@ -62,7 +62,7 @@
             This grant is for:
                 <ul>
                   <li>arable and horticultural farming businesses<br>supplying the food industry</li>
-                  <li>nurseries growing flowers </li>
+                  <li>nurseries growing ornamentals</li>
                   <li>forestry nurseries </li>
       
                 </ul>
