--- a/app/views/water/current/next-steps.html
+++ b/app/views/water/current/next-steps.html
@@ -32,7 +32,10 @@
             </div>
             <div class="govuk-body ">
                 <p class="govuk-!-padding-left-9 ">RPA will be in touch when the full application period opens.<br>
-                They’ll tell you about the application form and any guidance<br> you need to submit a full application.
+                They will tell you if your project scored well enough to get the full application form. <br>
+                Value for money will be assessed alongside the funding priorities at full application stage and this may impact your overall project score.<br>
+                The likelihood of a full application being successful will also depend on the number and value of applications we receive.  
+
             </div><br>
             <div class="govuk-warning-text">
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
