--- a/app/views/water/current/reference-number.html
+++ b/app/views/water/current/reference-number.html
@@ -13,7 +13,7 @@
         Details submitted
        </h1>
     <div class="govuk-panel__body">
-      Your reference number<br><strong>GDAA54X</strong>
+      Your reference number<br><strong>WMAA54X</strong>
     </div>
    </div>
     <br>
