--- a/app/views/water/current/farming-type-fail.html
+++ b/app/views/water/current/farming-type-fail.html
@@ -13,11 +13,12 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-          This grant is only available to:   
+          You cannot apply for a grant from this scheme   
         </h1>
+        <p>This grant is only available to:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>arable and horticultural farming businesses that supply the food industry</li>
-          <li>nurseries growing flowers</li>
+          <li>nurseries growing ornamentals</li>
           <li>forestry nurseries</li>
         </ul>
         <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" target="_blank" class="govuk-!-font-size-19"> See other grants you may be eligible for.</a>
