--- a/app/views/water/current/guidance.html
+++ b/app/views/water/current/guidance.html
@@ -13,7 +13,7 @@
 <ul>
   <li>are in England</li>
   <li>grow crops for the food industry</li>
-  <li>are a nursery growing flowers</li>
+  <li>are a nursery growing ornamentals</li>
   <li>are a forestry nursery</li>
   <li>own the land the project will be on or have a lease for at least 5 years</li>
   <li>estimate the project costs will be over £87,500</li>
@@ -54,11 +54,6 @@
       <td class="govuk-table__cell">Full application</td>
       <td class="govuk-table__cell">1 September 2021</td>
       <td class="govuk-table__cell">31 December 2021</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Project completed and claims made</td>
-      <td class="govuk-table__cell"></td>
-      <td class="govuk-table__cell">21 March 2022</td>
     </tr>
   </tbody>
 </table>
