--- a/app/views/water/current/views/layouts/GUIDANCEWATER.html
+++ b/app/views/water/current/views/layouts/GUIDANCEWATER.html
@@ -54,7 +54,7 @@ Check if you can apply for a Farming Transformation Fund water management grant
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">This grant is to make more efficient use of water for irrigation and to secure water supplies for crops.</p>
+    <p class="gem-c-lead-paragraph">Get a grant to make more efficient use of water for irrigation and to secure water supplies for crops.</p>
 
   </div>
 </div>
