--- a/app/views/water/current/guidance.html
+++ b/app/views/water/current/guidance.html
@@ -92,6 +92,8 @@
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch once the application period opens.</p>
 <p>They will tell you if your project scored well enough to get the full application form.</p>
+<p>Value for money will be assessed alongside the funding priorities at full application stage and this may impact your overall project score.</p>
+<p>The likelihood of a full application being successful will also depend on the number and value of applications we receive.</p>
 <p>If you submit a full application and it is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
 <br/>
