--- a/app/views/water/current/project-cost-fail.html
+++ b/app/views/water/current/project-cost-fail.html
@@ -16,7 +16,7 @@
         You cannot apply for a grant from this scheme
      </h1>
 
-    <div class="govuk-inset-text">
+    <div class="govuk-body">
       <p>You can only apply for a grant of up to 40% of the estimated costs.</p>
       <p>The minimum grant you can apply for is £35,000 (40% of £87,500).</p>
       <p>The maximum grant is £1 million.</p>
