--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -18,5 +18,13 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/cookie-banner";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+.css-index-link-block {
+    background: #F8F8F8;
+    border: 0px solid #DEE0E2;
+    padding: 10px;
+    box-sizing: border-box;
+    margin-right: 60px;
+}
+
 
 @import "grants";
