--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% extends "./layouts/_BASEFULL.html" %}
+{% extends "slurry/current/views/layouts/_BASEFULL.html" %}
 
 {% block service %}
 
@@ -28,16 +28,19 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="water">
-          Water resource management EoI
+      <td class="govuk-table__cell"><a href="/slurry/current/guidance">
+          Slurry acidification grant
         </a></td>
-      <td class="govuk-table__cell">Eligibility and expression of interest</td>
+      <td class="govuk-table__cell">Eligibility checker (v1.0)  <br/>
+        <span class="govuk-body govuk-!-font-size-14"># Last updated on 25 June 2021 @ 08:05 <Br/>
+        # Robotics not included</span>
+      </td>
     </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="slurry">Slurry acidification</a>
-        </td>
-      <td class="govuk-table__cell">Eligibility checker</td>
-    </tr>
+
+
+
+
+
   </tbody>
 </table>
 
