project item changes

--- a/app/views/slurry/current/project-cost.html
+++ b/app/views/slurry/current/project-cost.html
@@ -50,7 +50,7 @@
           </h2>
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
-            {% for item in data['project-items'] %}
+            {% for item in data['associated-works'] %}
             <li>
                 {{ item | capitalize }}
             </li>
