--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -7,17 +7,11 @@
 <!--
 <span class="govuk-caption-xl">Prototypes</span>
 -->
-
-<h1 class="govuk-heading-l">
-  Grants prototypes
+<span class="govuk-caption-xl">Grants Prototype</span>
+<h1 class="govuk-heading-xl">
+  Slurry
 </h1>
-<p>
-  The following were built using GOV.UK Prototype Kit v9.8.0.
-</p>
 
-<!--
-<h2 class="govuk-heading-m"> Prototypes </h2>
--->
 
 <table class="govuk-table">
   <thead class="govuk-table__head">
