project-start fixes

--- a/app/views/slurry/current/answers.html
+++ b/app/views/slurry/current/answers.html
@@ -97,9 +97,9 @@
           <td class="govuk-table__cell"><a href="projects-impact">Change</td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Current volume teated
+          <th scope="row" class="govuk-table__header">Current volume treated
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['slurry-currently-treated'] | capitalize}}</li></ul></th>
-          <td class="govuk-table__cell">Week</td>
+          <td class="govuk-table__cell">Weak</td>
           <td class="govuk-table__cell">
             <ul class="govuk-list govuk-list--bullet govuk-body govuk-!-font-size-16">
               <li> productivity </li>
