Guidance page changes

--- a/app/views/slurry/current/guidance-prod-v1.html
+++ b/app/views/slurry/current/guidance-prod-v1.html
@@ -1,5 +1,5 @@
 
-{% extends "./views/layouts/GUIDANCESLURRY.html" %}
+{% extends "./views/layouts/GUIDANCESLURRY-PROD-V1.html" %}
 
 {% block guidance %}
 
@@ -16,7 +16,6 @@
   <li>are in England</li>
   <li>own the land the project will be on or have a lease for at least 5 years</li>
   <li>estimate the project costs are over £87,500</li>
-  <li>lorem ipsum dolor sit amet</li>
 
 </ul>
 
@@ -37,6 +36,8 @@ platea dictumst. Etiam condimentum eget eros nec cursus. </p>
   <li>mild acidification equipment such as acid storage, dosing equipment, mixing tank and pump </li>
   <li>acidification infrastructure</li>
   <li>slurry pipework </li>
+  <li>horticulture and arable equipment (for example, robotic planter, robotic weeding)</li>
+  <li>animal welfare equipment (for example, robotic milking)</li>
 
 </ul>
 
