UR walk-through changes

--- a/app/views/slurry/current/associated-works.html
+++ b/app/views/slurry/current/associated-works.html
@@ -44,13 +44,13 @@
       Mild acidification equipment
     </label>
     <div id="project-items-item-hint" class="govuk-hint govuk-checkboxes__hint">
-    Equipment for reducing the emissions of ammonia by lowering the pH value of slurry, such as:
+    Your acidification equipment must include all 4 of the following items:
 
         <ul class="govuk-list govuk-list--bullet govuk-hint govuk-checkboxes__hint">
-          <li>Acid storage</li>
-          <li>Dosing equipment</li>
-          <li>Mixing tank</li>
-          <li>Pump</li>
+          <li>acid storage</li>
+          <li>dosing equipment</li>
+          <li>mixing tank</li>
+          <li>pump</li>
         </ul>
 
     </div>
@@ -75,7 +75,7 @@
           Slurry pipework
         </label>
       </div>
-      
+
 
     </div>
 
