--- a/app/views/slurry/current/farming-type.html
+++ b/app/views/slurry/current/farming-type.html
@@ -36,9 +36,9 @@ What is your project about?
 
                   items: [
                 {
-                  value: "Robotics, automation and innovation",
-                  text: "Robotics, automation and innovation",
-                  checked: checked("farming-type", "Robotics, automation and innovation")
+                  value: "Robotics and innovation",
+                  text: "Robotics and innovation",
+                  checked: checked("farming-type", "Robotics and innovation")
                 },
                 {
                   value: "Slurry acidification",
