--- a/app/views/slurry/current/legal-status-fail.html
+++ b/app/views/slurry/current/legal-status-fail.html
@@ -24,7 +24,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This is only open to a business with a different legal status.</p>
+      <p class="govuk-body">Your business does not have an eligible legal status.</p>
         <details class="govuk-details" data-module="govuk-details">
           <summary class="govuk-details__summary">
             <span class="govuk-details__summary-text">
