--- a/app/views/slurry/current/projects-impact.html
+++ b/app/views/slurry/current/projects-impact.html
@@ -23,7 +23,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<h1 class="govuk-heading-l">What is your project about?</h1>
+<h1 class="govuk-heading-l">What impact will the project have?</h1>
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
