--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,7 +34,7 @@
       <td class="govuk-table__cell">Eligibility and expression of interest</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="slurry">Slurry acidification</a>
+      <td class="govuk-table__cell"><a href="slurry">Productivity grant</a>
         </td>
       <td class="govuk-table__cell">Eligibility checker</td>
     </tr>
