--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -1,5 +1,5 @@
 
-{% extends "./views/layouts/GUIDANCESLURRY.html" %}
+{% extends "./views/layouts/GUIDANCESLURRY-PROD-V2.html" %}
 
 {% block guidance %}
 
@@ -16,7 +16,6 @@
   <li>are in England</li>
   <li>own the land the project will be on or have a lease for at least 5 years</li>
   <li>estimate the project costs are over £87,500</li>
-  <li>lorem ipsum dolor sit amet</li>
 
 </ul>
 
@@ -27,18 +26,21 @@
 
 
 <p>The Farming Transformation Fund slurry acidification grant is to lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-<p>Slurry acidification is lorem ipsum consectetur adipiscing elit. Curabitur
-at odio lobortis, sagittis erat eget, egestas magna. In hac habitasse
-platea dictumst. Etiam condimentum eget eros nec cursus. </p>
 
-<p>The grant can pay up to 40% of the costs for:</p>
+<h3 class="govuk-heading-s">Slurry treatment equipment</h3>
+  <p>The grant can pay up to 40% of the costs for:</p>
+    <ul>
+      <li>mild acidification equipment such as acid storage, dosing equipment, mixing tank and pump </li>
+      <li>acidification infrastructure</li>
+      <li>slurry pipework </li>
+    </ul>
 
-<ul>
-  <li>mild acidification equipment such as acid storage, dosing equipment, mixing tank and pump </li>
-  <li>acidification infrastructure</li>
-  <li>slurry pipework </li>
-
-</ul>
+<h3 class="govuk-heading-s">Robotics, automation and innovation equipment </h3>
+  <p>The grant can pay up to 40% of the costs for:</p>
+    <ul>
+      <li>horticulture and arable equipment (for example, robotic planter, robotic weeding)</li>
+      <li>animal welfare equipment (for example, robotic milking)</li>
+    </ul>
 
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £1 million</p>
 
