--- a/app/views/slurry/current/reference-number.html
+++ b/app/views/slurry/current/reference-number.html
@@ -3,7 +3,15 @@
 {% block pageTitle %}
   Check all your answers
 {% endblock %}
-
+{% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+{{ govukPhaseBanner({
+  tag: {
+    text: "beta"
+  },
+  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+}) }}
+{% endblock %}
 {% block content %}
 
 <div class="govuk-grid-row">
