--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -23,10 +23,10 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="/slurry/current/guidance">
-          Slurry acidification grant
+          Productivity grant
         </a></td>
       <td class="govuk-table__cell">Eligibility checker (v1.0)  <br/>
-        <span class="govuk-body govuk-!-font-size-14"># Last updated on 25 June 2021 @ 08:05 <Br/>
+        <span class="govuk-body govuk-!-font-size-14"># Last updated on 28 June 2021 @ 13:48 <Br/>
         # Robotics not included</span>
       </td>
     </tr>
