--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -25,7 +25,13 @@
 
 
 
-<p>The Farming Transformation Fund slurry acidification grant is to lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+<p>Get a grant to improve economic and environmental performance and resilience through productive and innovative farming methods.</p>
+<p>The Farming Transformation Fund productivity grant is for: </p>
+<ul>
+  <li>the adoption of robotic and innovative equipment for crop and livestock production and harvesting</li>
+  <li>acidification infrastructure</li>
+  <li>more efficient use of livestock slurries, manures and digestate through acidification treatment</li>
+</ul>
 
 <h3 class="govuk-heading-s">Slurry treatment equipment</h3>
   <p>The grant can pay up to 40% of the costs for:</p>
@@ -38,8 +44,9 @@
 <h3 class="govuk-heading-s">Robotics, automation and innovation equipment </h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
-      <li>horticulture and arable equipment (for example, robotic planter, robotic weeding)</li>
-      <li>animal welfare equipment (for example, robotic milking)</li>
+      <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, egg-handling robots, advanced ventilation controls)</li>
+      <li>robotic or innovative animal welfare equipment (for example, robotic milking)</li>
+      <li>innovative LED lighting equipment (for example, wavelength-controlled LED lighting for crop and livestock production)</li>
     </ul>
 
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £1 million</p>
